# CinderGP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org
assets/: Monster_remesh.stl  imgui.ini
buildzapcc/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
src/: .#CinderGP.cpp  BasicApp.cpp  BasicApp_old.cpp  CinderGP.cpp  CinderLibIgl.h  GPATH  GRTAGS  GTAGS  PickingByColorApp.cpp  test.cpp
src/Grpah/: ngraph.hpp
